plugins/javaFX/testData/coercing/referencedTag.fxml
<?import javafx.scene.layout.GridPane?>
<GridPane xmlns:fx="http://javafx.com/fxml" fx:id="foo">
    <columnConstraints>
        <<error descr="Unable to coerce javafx.scene.layout.GridPane to javafx.scene.layout.ColumnConstraints">fx:reference</error> source="foo"/>
    </columnConstraints>
</GridPane>
